<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="650dp"
    tools:context=".UserApplicationLayer.RouteCreator">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/maps"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="625dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf = "parent"/>

    <Button
        android:id="@+id/openInApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Open Route in App"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maps"
        app:layout_constraintVertical_bias="0.99"
        android:backgroundTint="@color/white"
        android:textColor="#F28F8F"/>


</androidx.constraintlayout.widget.ConstraintLayout>