...
		<!--			android:layout_marginEnd="318dp"-->
		<!--			android:layout_marginBottom="318dp"-->
		<!--			android:text="R" />-->


		<Button
			android:id="@+id/carRouteButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentStart="true"
			android:layout_marginStart="60dp"
			android:layout_marginTop="600dp"
			android:text="Car Route" />
...
