...
                android:text="Plan My Day"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/planButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/SavedAttractionButton"
                android:layout_alignBottom="@+id/SavedAttractionButton"
                android:layout_marginTop="20dp"
                android:layout_marginRight="-120dp"
...
